--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.1"
+    "react-native": "0.61.1",
+    "react-navigation": "^2.18.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -25,5 +26,9 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:Ricardovasconcelos/TecHype.git",
+  "author": "Ricardo Vasconcelos <ricardovasconcelos.dev@gmail.com>",
+  "license": "MIT"
 }
